# fijian100wl

./: .pre-commit-config.yaml  README.md  pyproject.toml
fijian100wl/: CONTRIBUTING.md  MANIFEST.in  development.ini  setup.cfg  setup.py
fijian100wl/fijian100wl/: __init__.py  appconf.ini  assets.py  datatables.py  interfaces.py  maps.py  models.py
fijian100wl/fijian100wl/scripts/: initializedb.py
fijian100wl/fijian100wl/templates/: app.mako  fijian100wl.mako
fijian100wl/fijian100wl/templates/communalect/: detail_html.mako  index_html.mako
fijian100wl/fijian100wl/templates/communalectgroup/: detail_html.mako  index_html.mako
fijian100wl/fijian100wl/templates/dataset/: detail_html.mako
fijian100wl/fijian100wl/templates/language/: detail_html.mako  index_html.mako
fijian100wl/fijian100wl/templates/parameter/: detail_html.mako  index_html.mako
fijian100wl/fijian100wl/templates/valueset/: detail_html.mako
fijian100wl/fijian100wl/tests/: conftest.py
