[tool.poetry]
name = "fijian100wl"
version = "0.1.0"
description = ""
authors = ["MURAWAKI Yugo <murawaki@i.kyoto-u.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
clld = {extras = ["bootstrap"], version = "^11.0.1"}
psycopg2-binary = "^2.9.7"
pytest = "^7.4.2"
passlib = "^1.7.4"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
